[tool.poetry]
name = "flask-auth"
version = "0.1.0"
description = "This is an restful service that serves users and authentication"
authors = ["Johnny Martin <johnny@iamjohnnym.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask_sqlalchemy = "^2.3"
flask-testing = "^0.7.1"
gunicorn = "^19.9"
flask-cors = "^3.0"
flask-migrate = "^2.3"
flask-restplus = "^0.12.1"
flask-praetorian = {git = "https://github.com/dusktreader/flask-praetorian.git"}
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage = "^4.5"
flake8 = "^3.6"
bandit = "^1.5"
flask-debugtoolbar = "^0.10.1"
better-exceptions = "^0.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
